--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,9 +68,11 @@
     <Compile Include="Assets\Scripts\Lesson6s Scripts\Trigger\GateTrigger.cs" />
     <Compile Include="Assets\Scripts\Lesson6s Scripts\Trigger\HurtLayButTrigger.cs" />
     <Compile Include="Assets\Scripts\MainCam.cs" />
+    <Compile Include="Assets\Scripts\Lesson6s Scripts\UIScript\Texts.cs" />
     <Compile Include="Assets\Scripts\OrderManager.cs" />
     <Compile Include="Assets\Scripts\Lesson6s Scripts\SetUpGameMap\SpawnThings.cs" />
     <Compile Include="Assets\Scripts\Lesson6s Scripts\Trigger\EatLay.cs" />
+    <Compile Include="Assets\Scripts\Lesson6s Scripts\UIScript\Buttons.cs" />
     <Compile Include="Assets\Scripts\Lesson6s Scripts\SetUpGameMap\SetUpCoins.cs" />
     <Compile Include="Assets\Scripts\WPManager.cs" />
     <Compile Include="Assets\Scripts\IPlayMethod.cs" />
@@ -83,7 +85,31 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\MousePositionControl.cs" />
     <Compile Include="Assets\Scripts\Lesson6s Scripts\GreenCarControl.cs" />
+    <Compile Include="Assets\Scripts\Lesson6s Scripts\UIScript\Sliders.cs" />
     <Compile Include="Assets\Scripts\MovezController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
